--- a/CachingCore/CachingCore.csproj
+++ b/CachingCore/CachingCore.csproj
@@ -7,7 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
+        <PackageReference Include="FastEndpoints" Version="7.0.0" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
