--- a/CachingCore/CachingCore.csproj
+++ b/CachingCore/CachingCore.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="FastEndpoints.Swagger" Version="7.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
