--- a/CachingCore/appsettings.json
+++ b/CachingCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=caching;Username=postgres;Password=wagwan2002"
+  },
   "AllowedHosts": "*"
 }
