--- a/CachingCore/appsettings.json
+++ b/CachingCore/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=Caching;Username=postgres;Password=wagwan2002"
+    "Postgres": "Host=localhost;Port=5432;Database=caching;Username=postgres;Password=wagwan2002"
   },
   "AllowedHosts": "*"
 }
