chore: dbdata fetch or not

--- a/CachingCore/appsettings.json
+++ b/CachingCore/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=cachingtest;Username=postgres;Password=wagwan2002"
+    "Postgres": "Host=localhost;Port=5432;Database=cachingtest;Username=postgres;Password=wagwan2002",
+    "RedisCacheUrl": "127.0.0.1:6379"
   },
-  "RedisCacheUrl": "127.0.0.1:6379",
   "AllowedHosts": "*"
 }
