--- a/CachingCore/CachingCore.csproj
+++ b/CachingCore/CachingCore.csproj
@@ -22,6 +22,8 @@
         <PackageReference Include="Npgsql" Version="9.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0-rc.2" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.11" />
+        <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
     </ItemGroup>
 
