chore: configuraing seriloig

--- a/CachingCore/appsettings.json
+++ b/CachingCore/appsettings.json
@@ -6,7 +6,8 @@
         "Microsoft": "Warning",
         "System": "Warning"
       }
-    }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "ConnectionStrings": {
     "Postgres": "Host=localhost;Port=5432;Database=cachingtest;Username=postgres;Password=wagwan2002",
